@@ -11,6 +11,7 @@ import java.awt.event.MouseEvent;
 import java.rmi.RemoteException;
 import java.util.ArrayList;
 
+import javax.swing.JComboBox;
 import javax.swing.JFrame;
 import javax.swing.JLabel;
 import javax.swing.JPanel;
@@ -29,6 +30,7 @@ import org.jfree.data.category.CategoryDataset;
 import org.jfree.data.category.DefaultCategoryDataset;
 
 import data.po.playerData.PlayerDataSeason_Avg_Basic;
+import data.po.playerData.PlayerDataSeason_Tot_Basic;
 import bussinesslogic.player.PlayerLogic_db;
 import presentation.component.BgPanel;
 import presentation.component.ChartCheckBox;
@@ -43,10 +45,11 @@ public class TeamBarChart extends BgPanel{
 	private ChartCheckBox[] chartChekBox;
 	private JPanel layeredBarChartPanel;
 	private boolean[] select;
-	private boolean isFirst;
+	private boolean isFirst, isNormal;
 	private GLabel selectLabel, selectButton;
 	private String[] dataType = {"三分％", "命中％", "罚球％", "助攻", "抢断", "篮板", 
 		"盖帽", "失误", "犯规", "分钟", "得分"};
+//	private JComboBox<String> avg;
 
 	public TeamBarChart(String players){
 		super("");
@@ -73,6 +76,7 @@ public class TeamBarChart extends BgPanel{
 		this.setVisible(true);
 		
 		isFirst = true;
+		isNormal = true;
 		
 		init();
 		chartInit();
@@ -112,6 +116,8 @@ public class TeamBarChart extends BgPanel{
 			}else{
 				chartChekBox[i].setBounds(50+(150)*(i-6), 45, 100, 25);
 			}
+			
+			chartChekBox[i].setBackground(UIUtil.bgGrey);
 
 			chartChekBox[i].setText(dataType[i]);
 			chartChekBox[i].setForeground(UIUtil.bgWhite);
@@ -135,97 +141,204 @@ public class TeamBarChart extends BgPanel{
 		select[0] = true;
 		chartChekBox[0].setSelected(true);
 
+//		String []isTot = {"场均", "总数"};
+//		avg = new JComboBox<String>(isTot);
+//		avg.setBounds(50, 0, 100, 25);
+//		this.add(avg);
+//		avg.addActionListener(new ActionListener() {
+//			@Override
+//			public void actionPerformed(ActionEvent e) {
+//				if(avg.getSelectedIndex() == 0){
+//					isNormal = true;
+//				}else{
+//					isNormal = false;
+//				}
+//				chartInit();
+//			}
+//		});
 	}
 	
 	private void chartInit(){
 		DefaultCategoryDataset localDefaultCategoryDataset = new DefaultCategoryDataset();
 		
-		for(int j=0;j<playerNames.length;j++){
-			if(select[0]){
-				if((normalAvgs[j].getThper()!=null)&&(!normalAvgs[j].getThper().replaceAll("%", "").equals(""))){
-					localDefaultCategoryDataset.addValue(Double.valueOf(normalAvgs[j].getThper().replaceAll("%", "")), dataType[0], playerNames[j]);
-				}else{
-					localDefaultCategoryDataset.addValue(new Double(0), dataType[0], playerNames[j]);
+		if(isNormal){
+			for(int j=0;j<playerNames.length;j++){
+				if(select[0]){
+					if((normalAvgs[j].getThper()!=null)&&(!normalAvgs[j].getThper().replaceAll("%", "").equals(""))){
+						localDefaultCategoryDataset.addValue(Double.valueOf(normalAvgs[j].getThper().replaceAll("%", "")), dataType[0], playerNames[j]);
+					}else{
+						localDefaultCategoryDataset.addValue(new Double(0), dataType[0], playerNames[j]);
+					}
+				}
+				
+				if(select[1]){
+					if((normalAvgs[j].getFtper()!=null)&&(!normalAvgs[j].getFtper().replaceAll("%", "").equals(""))){
+						localDefaultCategoryDataset.addValue(Double.valueOf(normalAvgs[j].getFtper().replaceAll("%", "")), dataType[1], playerNames[j]);
+					}else{
+						localDefaultCategoryDataset.addValue(new Double(0), dataType[1], playerNames[j]);
+					}
+				}
+				
+				if(select[2]){
+					if((normalAvgs[j].getShootper()!=null)&&(!normalAvgs[j].getShootper().replaceAll("%", "").equals(""))){
+						localDefaultCategoryDataset.addValue(Double.valueOf(normalAvgs[j].getShootper().replaceAll("%", "")), dataType[2], playerNames[j]);
+					}else{
+						localDefaultCategoryDataset.addValue(new Double(0), dataType[2], playerNames[j]);
+					}
+				}
+				
+				if(select[3]){
+					if((normalAvgs[j].getAssist()!=null)&&(!normalAvgs[j].getAssist().replaceAll("%", "").equals(""))){
+						localDefaultCategoryDataset.addValue(Double.valueOf(normalAvgs[j].getAssist().replaceAll("%", "")), dataType[3], playerNames[j]);
+					}else{
+						localDefaultCategoryDataset.addValue(new Double(0), dataType[3], playerNames[j]);
+					}
+				}
+				
+				if(select[4]){
+					if((normalAvgs[j].getSteal()!=null)&&(!normalAvgs[j].getSteal().replaceAll("%", "").equals(""))){
+						localDefaultCategoryDataset.addValue(Double.valueOf(normalAvgs[j].getSteal().replaceAll("%", "")), dataType[4], playerNames[j]);
+					}else{
+						localDefaultCategoryDataset.addValue(new Double(0), dataType[4], playerNames[j]);
+					}
+				}
+				
+				if(select[5]){
+					if((normalAvgs[j].getBackbound()!=null)&&(!normalAvgs[j].getBackbound().replaceAll("%", "").equals(""))){
+						localDefaultCategoryDataset.addValue(Double.valueOf(normalAvgs[j].getBackbound().replaceAll("%", "")), dataType[5], playerNames[j]);
+					}else{
+						localDefaultCategoryDataset.addValue(new Double(0), dataType[5], playerNames[j]);
+					}
+				}
+				
+				if(select[6]){
+					if((normalAvgs[j].getRejection()!=null)&&(!normalAvgs[j].getRejection().replaceAll("%", "").equals(""))){
+						localDefaultCategoryDataset.addValue(Double.valueOf(normalAvgs[j].getRejection().replaceAll("%", "")), dataType[6], playerNames[j]);
+					}else{
+						localDefaultCategoryDataset.addValue(new Double(0), dataType[6], playerNames[j]);
+					}
+				}
+				
+				if(select[7]){
+					if((normalAvgs[j].getMiss()!=null)&&(!normalAvgs[j].getMiss().replaceAll("%", "").equals(""))){
+						localDefaultCategoryDataset.addValue(Double.valueOf(normalAvgs[j].getMiss().replaceAll("%", "")), dataType[7], playerNames[j]);
+					}else{
+						localDefaultCategoryDataset.addValue(new Double(0), dataType[7], playerNames[j]);
+					}
+				}
+				
+				if(select[8]){
+					if((normalAvgs[j].getFoul()!=null)&&(!normalAvgs[j].getFoul().replaceAll("%", "").equals(""))){
+						localDefaultCategoryDataset.addValue(Double.valueOf(normalAvgs[j].getFoul().replaceAll("%", "")), dataType[8], playerNames[j]);
+					}else{
+						localDefaultCategoryDataset.addValue(new Double(0), dataType[8], playerNames[j]);
+					}
+				}
+				
+				if(select[9]){
+					if((normalAvgs[j].getTime()!=null)&&(!normalAvgs[j].getTime().replaceAll("%", "").equals(""))){
+						localDefaultCategoryDataset.addValue(Double.valueOf(normalAvgs[j].getTime().replaceAll("%", "")), dataType[9], playerNames[j]);
+					}else{
+						localDefaultCategoryDataset.addValue(new Double(0), dataType[9], playerNames[j]);
+					}
+				}
+				
+				if(select[10]){
+					if((normalAvgs[j].getPts()!=null)&&(!normalAvgs[j].getPts().replaceAll("%", "").equals(""))){
+						localDefaultCategoryDataset.addValue(Double.valueOf(normalAvgs[j].getPts().replaceAll("%", "")), dataType[10], playerNames[j]);
+					}else{
+						localDefaultCategoryDataset.addValue(new Double(0), dataType[10], playerNames[j]);
+					}
 				}
 			}
-			
-			if(select[1]){
-				if((normalAvgs[j].getFtper()!=null)&&(!normalAvgs[j].getFtper().replaceAll("%", "").equals(""))){
-					localDefaultCategoryDataset.addValue(Double.valueOf(normalAvgs[j].getFtper().replaceAll("%", "")), dataType[1], playerNames[j]);
-				}else{
-					localDefaultCategoryDataset.addValue(new Double(0), dataType[1], playerNames[j]);
+		}else{
+			for(int j=0;j<playerNames.length;j++){
+				if(select[0]){
+					if((normalAvgs[j].getThper()!=null)&&(!normalAvgs[j].getThper().replaceAll("%", "").equals(""))){
+						localDefaultCategoryDataset.addValue(Double.valueOf(normalAvgs[j].getThper().replaceAll("%", "")), dataType[0], playerNames[j]);
+					}else{
+						localDefaultCategoryDataset.addValue(new Double(0), dataType[0], playerNames[j]);
+					}
 				}
-			}
-			
-			if(select[2]){
-				if((normalAvgs[j].getShootper()!=null)&&(!normalAvgs[j].getShootper().replaceAll("%", "").equals(""))){
-					localDefaultCategoryDataset.addValue(Double.valueOf(normalAvgs[j].getShootper().replaceAll("%", "")), dataType[2], playerNames[j]);
-				}else{
-					localDefaultCategoryDataset.addValue(new Double(0), dataType[2], playerNames[j]);
+				
+				if(select[1]){
+					if((normalAvgs[j].getFtper()!=null)&&(!normalAvgs[j].getFtper().replaceAll("%", "").equals(""))){
+						localDefaultCategoryDataset.addValue(Double.valueOf(normalAvgs[j].getFtper().replaceAll("%", "")), dataType[1], playerNames[j]);
+					}else{
+						localDefaultCategoryDataset.addValue(new Double(0), dataType[1], playerNames[j]);
+					}
 				}
-			}
-			
-			if(select[3]){
-				if((normalAvgs[j].getAssist()!=null)&&(!normalAvgs[j].getAssist().replaceAll("%", "").equals(""))){
-					localDefaultCategoryDataset.addValue(Double.valueOf(normalAvgs[j].getAssist().replaceAll("%", "")), dataType[3], playerNames[j]);
-				}else{
-					localDefaultCategoryDataset.addValue(new Double(0), dataType[3], playerNames[j]);
+				
+				if(select[2]){
+					if((normalAvgs[j].getShootper()!=null)&&(!normalAvgs[j].getShootper().replaceAll("%", "").equals(""))){
+						localDefaultCategoryDataset.addValue(Double.valueOf(normalAvgs[j].getShootper().replaceAll("%", "")), dataType[2], playerNames[j]);
+					}else{
+						localDefaultCategoryDataset.addValue(new Double(0), dataType[2], playerNames[j]);
+					}
 				}
-			}
-			
-			if(select[4]){
-				if((normalAvgs[j].getSteal()!=null)&&(!normalAvgs[j].getSteal().replaceAll("%", "").equals(""))){
-					localDefaultCategoryDataset.addValue(Double.valueOf(normalAvgs[j].getSteal().replaceAll("%", "")), dataType[4], playerNames[j]);
-				}else{
-					localDefaultCategoryDataset.addValue(new Double(0), dataType[4], playerNames[j]);
+				
+				if(select[3]){
+					if((normalAvgs[j].getAssist()!=null)&&(!normalAvgs[j].getAssist().replaceAll("%", "").equals(""))){
+						localDefaultCategoryDataset.addValue(Double.valueOf(normalAvgs[j].getAssist().replaceAll("%", "")), dataType[3], playerNames[j]);
+					}else{
+						localDefaultCategoryDataset.addValue(new Double(0), dataType[3], playerNames[j]);
+					}
 				}
-			}
-			
-			if(select[5]){
-				if((normalAvgs[j].getBackbound()!=null)&&(!normalAvgs[j].getBackbound().replaceAll("%", "").equals(""))){
-					localDefaultCategoryDataset.addValue(Double.valueOf(normalAvgs[j].getBackbound().replaceAll("%", "")), dataType[5], playerNames[j]);
-				}else{
-					localDefaultCategoryDataset.addValue(new Double(0), dataType[5], playerNames[j]);
+				
+				if(select[4]){
+					if((normalAvgs[j].getSteal()!=null)&&(!normalAvgs[j].getSteal().replaceAll("%", "").equals(""))){
+						localDefaultCategoryDataset.addValue(Double.valueOf(normalAvgs[j].getSteal().replaceAll("%", "")), dataType[4], playerNames[j]);
+					}else{
+						localDefaultCategoryDataset.addValue(new Double(0), dataType[4], playerNames[j]);
+					}
 				}
-			}
-			
-			if(select[6]){
-				if((normalAvgs[j].getRejection()!=null)&&(!normalAvgs[j].getRejection().replaceAll("%", "").equals(""))){
-					localDefaultCategoryDataset.addValue(Double.valueOf(normalAvgs[j].getRejection().replaceAll("%", "")), dataType[6], playerNames[j]);
-				}else{
-					localDefaultCategoryDataset.addValue(new Double(0), dataType[6], playerNames[j]);
+				
+				if(select[5]){
+					if((normalAvgs[j].getBackbound()!=null)&&(!normalAvgs[j].getBackbound().replaceAll("%", "").equals(""))){
+						localDefaultCategoryDataset.addValue(Double.valueOf(normalAvgs[j].getBackbound().replaceAll("%", "")), dataType[5], playerNames[j]);
+					}else{
+						localDefaultCategoryDataset.addValue(new Double(0), dataType[5], playerNames[j]);
+					}
 				}
-			}
-			
-			if(select[7]){
-				if((normalAvgs[j].getMiss()!=null)&&(!normalAvgs[j].getMiss().replaceAll("%", "").equals(""))){
-					localDefaultCategoryDataset.addValue(Double.valueOf(normalAvgs[j].getMiss().replaceAll("%", "")), dataType[7], playerNames[j]);
-				}else{
-					localDefaultCategoryDataset.addValue(new Double(0), dataType[7], playerNames[j]);
+				
+				if(select[6]){
+					if((normalAvgs[j].getRejection()!=null)&&(!normalAvgs[j].getRejection().replaceAll("%", "").equals(""))){
+						localDefaultCategoryDataset.addValue(Double.valueOf(normalAvgs[j].getRejection().replaceAll("%", "")), dataType[6], playerNames[j]);
+					}else{
+						localDefaultCategoryDataset.addValue(new Double(0), dataType[6], playerNames[j]);
+					}
 				}
-			}
-			
-			if(select[8]){
-				if((normalAvgs[j].getFoul()!=null)&&(!normalAvgs[j].getFoul().replaceAll("%", "").equals(""))){
-					localDefaultCategoryDataset.addValue(Double.valueOf(normalAvgs[j].getFoul().replaceAll("%", "")), dataType[8], playerNames[j]);
-				}else{
-					localDefaultCategoryDataset.addValue(new Double(0), dataType[8], playerNames[j]);
+				
+				if(select[7]){
+					if((normalAvgs[j].getMiss()!=null)&&(!normalAvgs[j].getMiss().replaceAll("%", "").equals(""))){
+						localDefaultCategoryDataset.addValue(Double.valueOf(normalAvgs[j].getMiss().replaceAll("%", "")), dataType[7], playerNames[j]);
+					}else{
+						localDefaultCategoryDataset.addValue(new Double(0), dataType[7], playerNames[j]);
+					}
 				}
-			}
-			
-			if(select[9]){
-				if((normalAvgs[j].getTime()!=null)&&(!normalAvgs[j].getTime().replaceAll("%", "").equals(""))){
-					localDefaultCategoryDataset.addValue(Double.valueOf(normalAvgs[j].getTime().replaceAll("%", "")), dataType[9], playerNames[j]);
-				}else{
-					localDefaultCategoryDataset.addValue(new Double(0), dataType[9], playerNames[j]);
+				
+				if(select[8]){
+					if((normalAvgs[j].getFoul()!=null)&&(!normalAvgs[j].getFoul().replaceAll("%", "").equals(""))){
+						localDefaultCategoryDataset.addValue(Double.valueOf(normalAvgs[j].getFoul().replaceAll("%", "")), dataType[8], playerNames[j]);
+					}else{
+						localDefaultCategoryDataset.addValue(new Double(0), dataType[8], playerNames[j]);
+					}
 				}
-			}
-			
-			if(select[10]){
-				if((normalAvgs[j].getPts()!=null)&&(!normalAvgs[j].getPts().replaceAll("%", "").equals(""))){
-					localDefaultCategoryDataset.addValue(Double.valueOf(normalAvgs[j].getPts().replaceAll("%", "")), dataType[10], playerNames[j]);
-				}else{
-					localDefaultCategoryDataset.addValue(new Double(0), dataType[10], playerNames[j]);
+				
+				if(select[9]){
+					if((normalAvgs[j].getTime()!=null)&&(!normalAvgs[j].getTime().replaceAll("%", "").equals(""))){
+						localDefaultCategoryDataset.addValue(Double.valueOf(normalAvgs[j].getTime().replaceAll("%", "")), dataType[9], playerNames[j]);
+					}else{
+						localDefaultCategoryDataset.addValue(new Double(0), dataType[9], playerNames[j]);
+					}
+				}
+				
+				if(select[10]){
+					if((normalAvgs[j].getPts()!=null)&&(!normalAvgs[j].getPts().replaceAll("%", "").equals(""))){
+						localDefaultCategoryDataset.addValue(Double.valueOf(normalAvgs[j].getPts().replaceAll("%", "")), dataType[10], playerNames[j]);
+					}else{
+						localDefaultCategoryDataset.addValue(new Double(0), dataType[10], playerNames[j]);
+					}
 				}
 			}
 		}
@@ -285,7 +398,7 @@ class LayeredBarChart{
 	}
 
 	private static JFreeChart createChart(CategoryDataset paramCategoryDataset){
-		JFreeChart localJFreeChart = ChartFactory.createBarChart("球队成员数据柱状图", "球员", "数值", paramCategoryDataset);
+		JFreeChart localJFreeChart = ChartFactory.createBarChart("Team Members Data (Season Avg) ", "players", "data", paramCategoryDataset);
 	    CategoryPlot localCategoryPlot = (CategoryPlot)localJFreeChart.getPlot();
 	    localCategoryPlot.setDomainGridlinesVisible(true);
 	    localCategoryPlot.setRangeCrosshairVisible(true);
